feat: Add schema introspection via JDBC and enhance diff reporting with rename detection